--- a/style.css
+++ b/style.css
@@ -28,6 +28,12 @@ body{
     justify-content: space-between;
 }
 
+.name{
+    font-size: 1.2rem;
+    margin-left: 10px;
+    cursor: pointer;
+}
+
 .about{
     background: var(--second-layer-opacity);
     border-radius: 5px;
@@ -36,6 +42,15 @@ body{
     padding-top: 10px;
     padding-bottom: 10px;
     cursor: pointer;
+    transition: 0.4s ease;
+}
+
+.about:hover{
+    transform: scale(1.05);
+}
+
+.about:active{
+    transform: scale(0.95);
 }
 
 .github{
@@ -46,6 +61,15 @@ body{
     padding-top: 10px;
     padding-bottom: 10px;
     cursor: pointer;
+    transition: 0.4s ease;
+}
+
+.github:hover{
+    transform: scale(1.05);
+}
+
+.github:active{
+    transform: scale(0.95);
 }
 
 .right_menu{
@@ -104,6 +128,10 @@ body{
     transition: 0.4s ease;
 }
 
+.toggle_image:hover{
+    background: var(--first-layer);
+}
+
 .toggle_image_active{
     cursor: pointer;
     flex: 0.5;
@@ -114,6 +142,14 @@ body{
     padding-bottom: 5px;
     border-radius: 10px;
     background: var(--second-layer);
+}
+
+.toggle_image_active:hover{
+    transform: scale(1.05);
+}
+
+.toggle_image_active:active{
+    transform: scale(0.95);
 }
 
 .toggle_video{
@@ -128,6 +164,10 @@ body{
     transition: 0.4s ease;
 }
 
+.toggle_video:hover{
+    background: var(--first-layer);
+}
+
 .toggle_video_active{
     cursor: pointer;
     flex: 0.5;
@@ -138,6 +178,14 @@ body{
     padding-bottom: 5px;
     border-radius: 10px;
     background: var(--second-layer);
+}
+
+.toggle_video_active:hover{
+    transform: scale(1.05);
+}
+
+.toggle_video_active:active{
+    transform: scale(0.95);
 }
 
 .upload{
@@ -209,6 +257,6 @@ body{
     border-radius: 10px;
     text-align: center;
     height: 100%;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     text-align: center;
 }
