--- a/style.css
+++ b/style.css
@@ -1,309 +1,275 @@
-:root {
-  --body-color: #1b3c53;
-  --first-layer: #ffffffb0;
-  --second-layer: #456882;
-  --second-layer-opacity: #456882b0;
-  --body-first-layer: #234c6a;
+:root{
+    --body-color:#1B3C53;
+    --first-layer:#ffffffb0;
+    --second-layer:#456882;
+    --second-layer-opacity:#456882b0;
+    --body-first-layer:#234C6A;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  background: var(--body-color);
-  font-family: "Trebuchet MS", sans-serif;
+body{
+    margin: 0;
+    padding: 0;
+    background:var(--body-color);
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-::-webkit-scrollbar {
-  display: none;
+::-webkit-scrollbar{
+    display: none;
 }
 
-.header {
-  margin: 15px;
-  display: flex;
-  align-items: center;
-  border-radius: 15px;
-  background-color: var(--first-layer);
-  padding: 15px;
-  justify-content: space-between;
+.header{
+    margin: 15px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 15px;
+    background-color: var(--first-layer);
+    padding: 15px;
+    justify-content: space-between;
 }
 
-.header_btn {
-  background: var(--second-layer-opacity);
-  border: none;
-  border-radius: 5px;
-  color: black;
-  padding: 10px 20px;
-  margin-left: 10px;
-  font-size: 1rem;
-  text-decoration: none;
-  transition: background 0.3s ease, transform 0.3s ease;
+.left_side_header{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
-.header_btn:hover {
-  background: var(--second-layer);
-  transform: scale(1.05);
+.name{
+    font-size: 1.5rem;
+    margin-left: 10px;
+    cursor: pointer;
+    font-weight: 600;
 }
 
-
-.menu_dropdown {
-  position: relative;
-  display: none; /
+.about{
+    background: var(--second-layer-opacity);
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: 0.4s ease;
 }
 
-.menu_button {
-  background: var(--second-layer-opacity);
-  border: none;
-  border-radius: 5px;
-  color: black;
-  padding: 10px 20px;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: background 0.3s ease, transform 0.3s ease;
+.about:hover{
+    transform: scale(1.05);
 }
 
-.menu_button:hover {
-  background: var(--second-layer);
-  transform: scale(1.05);
+.about:active{
+    transform: scale(0.95);
 }
 
-.menu_content {
-  display: none;
-  position: absolute;
-  right: 0;
-  background: var(--first-layer);
-  min-width: 120px;
-  border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-  z-index: 100;
-  overflow: hidden;
+.github{
+    background: var(--second-layer-opacity);
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: 0.4s ease;
 }
 
-.menu_content a {
-  display: block;
-  color: black;
-  padding: 10px 15px;
-  text-decoration: none;
-  background: var(--second-layer-opacity);
-  transition: background 0.3s ease;
+.github:hover{
+    transform: scale(1.05);
 }
 
-.menu_content a:hover {
-  background: var(--second-layer);
+.github:active{
+    transform: scale(0.95);
 }
 
-.menu_dropdown.active .menu_content {
-  display: block;
+.right_menu{
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
 }
 
-.container {
-  display: flex;
-  margin: 15px;
-  border-radius: 15px;
-  padding: 15px;
-  background: var(--body-first-layer);
-  gap: 15px;
-  justify-content: center; 
+.link{
+    color: black;
+    text-decoration: none;
 }
 
-.left,
-.right {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  padding: 15px;
-  border-radius: 10px;
-  justify-content: space-between;
-  background: var(--first-layer);
-  box-shadow: 1px 1px 20px black;
-  align-items: center; 
+.container{
+    display: flex;
+    margin: 15px;
+    border-radius: 15px;
+    padding: 15px;
+    background: var(--body-first-layer);
+    gap: 15px;
 }
 
-.toggle {
-  background: var(--second-layer-opacity);
-  padding: 10px 30px;
-  border-radius: 10px;
-  gap: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  max-width: 350px;
+.left{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding: 15px;
+    border-radius: 10px;
+    background: var(--first-layer);
+    box-shadow: 1px 1px 20px black;
 }
 
-.toggle_image,
-.toggle_video {
-  cursor: pointer;
-  flex: 0.5;
-  text-align: center;
-  padding: 5px 20px;
-  border-radius: 10px;
-  transition: 0.4s ease;
+.toggle{
+    background: var(--second-layer-opacity);
+    padding: 10px 30px;
+    border-radius: 10px;
+    gap: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.toggle_image_active,
-.toggle_video_active {
-  background: var(--second-layer);
+.toggle_image{
+    cursor: pointer;
+    flex: 0.5;
+    text-align: center;
+    padding: 5px 20px;
+    border-radius: 10px;
+    transition: 0.4s ease;
 }
 
-.upload {
-  margin-top: 10px;
-  position: relative;
-  border: 2px dashed var(--first-layer);
-  border-radius: 12px;
-  padding: 40px;
-  background: var(--second-layer-opacity);
-  color: white;
-  text-align: center;
-  cursor: pointer;
-  transition: 0.3s;
-  width: 100%;
-  max-width: 350px;
+.toggle_image:hover{
+    background: var(--first-layer);
+    color: black;
+}
+
+.toggle_image_active{
+    cursor: pointer;
+    flex: 0.5;
+    text-align: center;
+    padding: 5px 20px;
+    border-radius: 10px;
+    background: var(--second-layer);
+    color: white;
+}
+
+.toggle_image_active:hover{
+    transform: scale(1.05);
+    color: black;
+}
+
+.toggle_image_active:active{
+    transform: scale(0.95);
+    color: black;
+}
+
+.toggle_video{
+    cursor: pointer;
+    flex: 0.5;
+    text-align: center;
+    padding: 5px 20px;
+    border-radius: 10px;
+    transition: 0.4s ease;
+}
+
+.toggle_video:hover{
+    background: var(--first-layer);
+    color: black;
+}
+
+.toggle_video_active{
+    cursor: pointer;
+    flex: 0.5;
+    text-align: center;
+    padding: 5px 20px;
+    border-radius: 10px;
+    background: var(--second-layer);
+    color: white;
+}
+
+.toggle_video_active:hover{
+    transform: scale(1.05);
+    color: black;
+}
+
+.toggle_video_active:active{
+    transform: scale(0.95);
+    color: black;
+}
+
+.upload{
+    margin-top: 15px;
+    position: relative;
+    border: 2px dashed var(--second-layer);
+    border-radius: 12px;
+    padding: 40px;
+    background: var(--second-layer-opacity);
+    color: white;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.3s;
 }
 
 .upload:hover {
-  transform: scale(1.02);
+    transform: scale(1.02);
 }
 
 .upload.dragover {
-  border-color: #fff;
-  background: rgba(255, 255, 255, 0.2);
+    border-color: #fff;
+    background: rgba(70, 104, 130, 0.9);
 }
 
 .upload input {
-  position: absolute;
-  inset: 0;
-  opacity: 0;
-  cursor: pointer;
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
 }
 
 .upload_text {
-  font-size: 1.1rem;
-  color: #fff;
+    font-size: 1.1rem;
+    color: #fff;
+    pointer-events: none;
 }
 
 .upload_text span {
-  color: #ffdada;
-  text-decoration: underline;
-  cursor: pointer;
+    color: #ffdada;
+    text-decoration: underline;
 }
 
-.right {
-  align-items: center;
-  justify-content: center;
-}
-
-.up_image,
-.up_video {
-  width: 70%;
-  border-radius: 10px;
-  margin-bottom: 10px;
-  display: none;
-  box-shadow: 2px 2px 10px black;
-}
-
-.result {
-  background: var(--second-layer-opacity);
-  padding: 15px;
-  margin: 15px;
-  width: calc(100% - 30px);
-  border-radius: 10px;
-  text-align: center;
-  font-size: 1.5rem;
-  max-width: 350px;
-}
-
-
-@media (max-width: 768px) {
-  html, body {
-    overflow-x: hidden;
-  }
-
-  .header {
-    flex-direction: column;
-    align-items: stretch;
-    gap: 10px;
-    width: 100%;
-    box-sizing: border-box;
-  }
-
-  .menu_desktop {
-    display: none;
-  }
-
-  .menu_dropdown {
+.right{
     display: flex;
-    justify-content: flex-end;
-  }
-
-  .container {
-    display: flex;
+    align-items: center;
     flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 10px;
-    box-sizing: border-box;
-    gap: 20px;
-  }
-
-  .left,
-  .right {
-    width: 95%;
-    max-width: 400px;
-    border-radius: 12px;
-    background: var(--first-layer);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-    padding: 20px;
-    margin: 0 auto;
-    align-items: center;
     justify-content: center;
-    box-sizing: border-box;
-  }
-
-  .toggle {
-    width: 100%;
-    max-width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background: var(--second-layer-opacity);
+    flex: 1;
+    padding: 15px;
     border-radius: 10px;
-    padding: 10px;
-    box-sizing: border-box;
-  }
+    background: var(--first-layer);
+    box-shadow: 1px 1px 20px black;
+    min-height: 300px;
+}
 
-  .upload {
+.up_image, .up_video{
     width: 100%;
-    background: var(--second-layer-opacity);
-    border: 2px dashed var(--first-layer);
+    max-height: 400px;
+    object-fit: contain;
     border-radius: 10px;
-    padding: 35px 15px;
-    margin-top: 15px;
-    box-sizing: border-box;
-    text-align: center;
-  }
+    margin-bottom: 15px;
+    display: none;
+    box-shadow: 2px 2px 10px black;
+}
 
-  .result {
-    width: 100%;
-    margin-top: 15px;
+.result{
     background: var(--second-layer-opacity);
-    padding: 20px;
+    padding: 15px;
+    width: calc(100% - 30px);
     border-radius: 10px;
     text-align: center;
     font-size: 1.2rem;
-    box-sizing: border-box;
-  }
-
-  .up_image,
-  .up_video {
-    width: 100%;
-    max-width: 90%;
-    border-radius: 10px;
-    margin-bottom: 10px;
-    display: none;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  }
+    color: white;
 }
 
+@media (max-width: 768px) {
+    .header {
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .right_menu {
+        width: 100%;
+        justify-content: center;
+    }
+
+    .container {
+        flex-direction: column;
+    }
+}
